@@ -8,5 +8,6 @@ Dagfinn Ilmari Manns?er <ilmari@ping.uio.no> -- devfs support.
 Henrique de Moraes Holschuh <hmh@debian.org> -- portion of pbuilder-satisfydepends (version dependency check)
 Daniel Schepler <schepler@math.berkeley.edu> -- many patches, --preserve-buildplace
 Sam Hartman <hartmans@debian.org> -- bind-mount patch
+Mattia Dongili <malattia@linux.it> -- user-mode-linux support
 
 $Id$
