@@ -209,7 +209,7 @@ while [ -n "$1" ]; do
 	    # specify this option if I am running inside UML.
 	    echo " -> Running in pbuilder-user-mode-linux mode"
 	    INTERNAL_BUILD_UML="yes"
-	    IGNORE_UMOUNT="yes"
+	    IGNORE_UMOUNT="no"
 	    shift; 
 	    ;;
 	--) # end of processing for this
