@@ -5,8 +5,9 @@ pbuilder (0.159) UNRELEASED; urgency=low
     dr@jones.dk (Closes: #385351).
   * add notes in the comment that files in examples are useful for
     --hookdir option.
+  * add patch from Mattia Dongili <malattia@linux.it> to revive pbuilder-uml.
 
- -- Junichi Uekawa <dancer@debian.org>  Sun,  3 Sep 2006 18:12:21 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 16 Sep 2006 16:59:02 +0900
 
 pbuilder (0.158) unstable; urgency=low
 
