@@ -1,3 +1,15 @@
+2006-09-16  Junichi Uekawa  <dancer@debian.org>
+
+	* added patch from Mattia Dongili <malattia@linux.it> for pbuilder-uml.
+	diffstat /tmp/pbuilder-uml.diff 
+	debian/rules             |   16 ++++++++++++++--
+	pbuilder-checkparams     |    2 +-
+	pbuilder-uml-checkparams |    2 +-
+	pbuilder-user-mode-linux |   20 +++++++++++++++-----
+	pdebuild-uml-checkparams |    2 +-
+	pdebuild-user-mode-linux |    2 +-
+	6 files changed, 33 insertions(+), 11 deletions(-)
+
 2006-09-03  Junichi Uekawa  <dancer@debian.org>
 
 	* examples/B90linda, etc.: add notice that it's usable for hookdir.
